# funbox_private

./: .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  MORE_REFERENCES.md  README.md
examples/dos/: LIST.md
examples/gba/: LIST.md
libraries/: CMakeLists.txt
notes/: DESIGN_CHOICES.md  LINKS.md
notes/nx/: TODO.md
notes/ps1/: TODO.md
notes/ps2/: TODO.md
scripts/: archive
src/: CMakeLists.txt
src/core/: CMakeLists.txt  envos.c  error.c  fb.c  hashes.c  logger.c  logger.h  procinfo.c  simd.c  storage.c  storage.h  strings.c  types.h  util.c
src/core/algo/: ht.c  ht.h  list.c  list.h  robin.c  robin.h  set.c  set.h  vector.c  vector.h
src/core/arm/: CMakeLists.txt  dynrec.c  dynrec.h  jit.c  jit.h  jitagent.c  jitagent.h  th_context.c  th_context.h  types.h
src/core/arm/frontend/aarch64/: arm64_2irs.c  arm64_fd.c  arm64_frontend.c  arm64_frontend.h  arm64_table.c  arm64_types.h
src/core/arm/ir/: types.h
src/core/arm/unit_tests/: CMakeLists.txt  fibo_arm64.c  nop_test_arm64.c
src/core/fs/: dir.c  dir.h  dirrec.c  file.c  file.h  fs.c  mapfile.c  mapfile.h  types.h  userfs.c  userfs.h
src/core/sdl/: sdl_app.c  sdl_app.h  sdl_frames.c  sdl_text.c
src/core/unit_test/: CMakeLists.txt  robin_test.c  userfs_files.c
src/core/zip_fs/: zip.h  zip_dir.c  zip_file.c
src/finesh/: CMakeLists.txt  Glossary.md  config.c  config.h  main.c
src/finesh/bundle/: loader.c  loader.h  pkglist.c  pkglist.h
src/finesh/fsh/: plist.c  plist.h
src/finesh/sh_fs/: plist.c  plist.h
src/funbox/: CMakeLists.txt  applet.c  applet.h  applet_types.c  funbox.c
src/funbox_app/: CMakeLists.txt  main.c
src/funbox_app/funbox_gui/: CMakeLists.txt  main.c
src/heyds/: CMakeLists.txt
src/neszinho/: CMakeLists.txt
src/nextps/: CMakeLists.txt  bus.c  cache.c  cache.h  cop0.c  cop0.h  cpu.c  cpu.h  main.c  ps.h
src/playme/: CMakeLists.txt  main.c  manifest.c  manifest.h
src/playme/vm/: class.c  coffee.c  coffee.h  cpool.c  cpool.h  interpreter.c  method.c  types.c  types.h
src/psever/: CMakeLists.txt  main.c  pfs.c  pfs.h  pkg_loader.c  pkg_loader.h
src/reality64/: CMakeLists.txt  main.c
src/redos/: CMakeLists.txt  disk.c  disk.h  dospc.c  dospc.h  main.c  pc8086.c  pc8086.h  pc_cpu.c  pc_cpu.h
src/smallgba/: CMakeLists.txt  cartridge.c  cartridge.h  main.c  state.c  state.h
src/starsys2/: CMakeLists.txt  bridge.c  bridge.h  cycles.c  cycles.h  main.c  sony.c  sony.h  types.h
src/starsys2/ee/: cop0.c  cop0.h  dmac.c  dmac.h  ee.c  ee.h
src/starsys2/iop/: mips.c  mips.h
src/supernx/: CMakeLists.txt  main.c  nx_sys.c  nx_sys.h
src/supernx/fs_fmt/: aes_file.c  aes_file.h  content_archive.c  content_archive.h  offset_file.c  offset_file.h  pfs.c  pfs.h  romfs.c  romfs.h  submission_package.c  submission_package.h
src/supernx/hle_services/: types.h
src/supernx/hle_services/svt/: title_ver.c  title_ver.h
src/supernx/horizon/: content_fs.c  hos.c  hos.h  hos_ld.c  keys_db.c  keys_db.h  keys_fs.c  tik.c  tik.h
src/supernx/loader/: ld.c  loader_ro.c  nsp.c  nsp.h  nsz.c  nsz.h  types.h
