cmake_minimum_required(VERSION 3.31)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(core)

if(FUNBOX_COMPILE_ALL_SUBSYSTEMS)
    add_subdirectory(playme)
    add_subdirectory(supernx)
    add_subdirectory(starsys2)
    add_subdirectory(finesh)
    add_subdirectory(smallgba)
    add_subdirectory(neszinho)
    add_subdirectory(psever)
    add_subdirectory(heyds)
    add_subdirectory(reality64)
    add_subdirectory(nextps)
else()
endif()

if(FUNBOX_BUILD_GUI)
    add_subdirectory(funbox_app/funbox_gui)
else()
    add_subdirectory(funbox_app)
endif()
